# conway-rts

./: .bazelrc  .eslintrc.cjs  .gitignore  .prettierignore  BUILD  BUILD.bazel  CMakeLists.txt  CMakeLists.txt.in  MODULE.bazel  README.md  WORKSPACE  build.sh  cc_config.bzl  package.json  pnpm-lock.yaml  tsconfig.json  vcpkg-setup.sh  vite.config.mts
client/: BUILD  BUILD.bazel  bindings.cpp  index.html  vite.config.mts
client/public/: index.html  room-interaction.js  vite.config.ts
client/src/: App.tsx  GameClient.tsx  InteractiveLifeGrid.tsx  Lobby.tsx  RoomListing.tsx  Socket.ts  SocketLogger.tsx  SocketUtils.tsx  index.css  protobufDecoder.ts
client_wasm/: BUILD.bazel  LifeGrid.spec.ts  Room.spec.ts  Vector2.spec.ts  bindings.cpp  conway.ts
config/: BUILD.bazel
conway/: BUILD.bazel  life_grid.cc  life_grid.hh  life_grid.proto  life_grid_test.cc  structure.cc  structure.hh  structure.proto  structure_properties.cc  structure_properties.hh  structure_properties.proto  structure_properties_test.cc  structure_test.cc
conway_rts/: BUILD.bazel  array_buffer.hh  client.cc  client.hh  client_test.cc  event.cc  event.hh  event.proto  event_base.proto  event_queue.hh  event_room.proto  event_test.cc  room.cc  room.hh  room.proto  room_test.cc  structure_lookup.proto  team.cc  team.hh  team.proto  team_test.cc
docs/: class_diagram.puml
include/: Client.hpp  Event.hpp  EventQueue.hpp  ILifeGrid.h  ISerializable.hpp  LifeGrid.h  LifeGrid.hpp  LifeState.h  LifeState.hpp  LifeTemplate.h  MagicBytes.h  Player.h  Room.hpp  Structure.h  Structure.hpp  StructureProperties.hpp  StructureTemplate.hpp  Team.h  Team.hpp  Vector2.h  Vector2.hpp  testFunction.h
proto/: BUILD  BUILD.bazel  CMakeLists.txt  client.proto  life_grid.proto  message.proto  structure_lookup.proto  team.proto  vector2.proto
server/: BUILD.bazel  CMakeLists.txt  client_socket.cc  client_socket.hh  main.cpp  socket.proto
src/: Client.cpp  Event.cpp  ILifeGrid.cpp  LifeGrid.cpp  LifeTemplate.cpp  Room.cpp  Structure.cpp  StructureProperties.cpp  Team.cpp  Vector2.cpp  _template.cxx  dummy.cpp
src/conway/: life_grid.cc  life_grid_test.cc
src/utility/: BUILD.bazel  vector2.hh  vector2_test.cc
tests/: BUILD.bazel  CMakeLists.txt  Client.cpp  Event.cpp  LifeGrid.cpp  LifeTemplate.cpp  Room.cpp  Structure.cpp  StructureProperties.cpp  Team.cpp  Vector2.cpp  proto-test.cpp  sampleTest.cpp
tools/protobufjs/: BUILD.bazel  rules.bzl
utility/: BUILD.bazel  vector2.cc  vector2.hh  vector2_test.cc
