"""
Modules

There's emsdk in WORKSPACE but it's not added to the Bazel Central Registry yet
"""

bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "zlib", version = "1.3")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "9d438afd4febf622aa05b9a267c09439717e58b9",
)
