# Base game logic

load("//:cc_config.bzl", "CC_OPTS")

cc_library(
    name = "life_state",
    srcs = [],
    hdrs = ["life_state.hh"],
)

cc_library(
    name = "life_grid",
    srcs = ["life_grid.cc"],
    hdrs = ["life_grid.hh"],
    visibility = [
        "//client_wasm:__pkg__",
        "//conway_rts:__pkg__",
    ],
    deps = [
        ":life_state",
        "//utility:vector2",
    ],
)

proto_library(
    name = "life_grid_proto",
    srcs = ["life_grid.proto"],
    deps = ["//utility:vector2_proto"],
)

cc_proto_library(
    name = "life_grid_cc_proto",
    deps = [":life_grid_proto"],
)

cc_test(
    name = "life_grid_test",
    size = "small",
    srcs = ["life_grid_test.cc"],
    deps = [
        ":life_grid",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "structure",
    srcs = ["structure.cc"],
    hdrs = ["structure.hh"],
    copts = CC_OPTS,
    visibility = [
        "//client_wasm:__pkg__",
        "//conway_rts:__pkg__",
    ],
    deps = [
        ":life_grid",
        ":structure_properties",
        "//utility:vector2",
    ],
)

proto_library(
    name = "structure_proto",
    srcs = ["structure.proto"],
    visibility = ["//conway_rts:__pkg__"],
    deps = ["//utility:vector2_proto"],
)

cc_proto_library(
    name = "structure_cc_proto",
    deps = [":structure_proto"],
)

cc_test(
    name = "structure_test",
    size = "small",
    srcs = ["structure_test.cc"],
    deps = [
        ":structure",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "structure_properties",
    srcs = ["structure_properties.cc"],
    hdrs = ["structure_properties.hh"],
    visibility = [
        "//client_wasm:__pkg__",
        "//conway_rts:__pkg__",
    ],
    deps = [
        ":life_grid",
        ":life_state",
        "//utility:vector2",
    ],
)

proto_library(
    name = "structure_properties_proto",
    srcs = ["structure_properties.proto"],
    visibility = ["//conway_rts:__pkg__"],
    deps = [
        ":life_grid_proto",
        "//utility:vector2_proto",
    ],
)

cc_proto_library(
    name = "structure_properties_cc_proto",
    deps = [":structure_properties_proto"],
)

cc_test(
    name = "structure_properties_test",
    size = "small",
    srcs = ["structure_properties_test.cc"],
    deps = [
        ":structure_properties",
        "@googletest//:gtest_main",
    ],
)
