# game logic for handling player interactions

load("//:cc_config.bzl", "CC_OPTS")

cc_library(
    name = "array_buffer",
    srcs = [],
    hdrs = ["array_buffer.hh"],
)

cc_library(
    name = "client",
    srcs = ["client.cc"],
    hdrs = ["client.hh"],
    deps = [
        ":array_buffer",
        ":event",
        "//conway:structure",
    ],
)

cc_test(
    name = "client_test",
    size = "small",
    srcs = ["client_test.cc"],
    deps = [
        ":client",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "event",
    srcs = ["event.cc"],
    hdrs = ["event.hh"],
    deps = [":array_buffer"],
)

cc_test(
    name = "event_test",
    size = "small",
    srcs = ["event_test.cc"],
    deps = [
        ":event",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "event_queue",
    srcs = [],
    hdrs = ["event_queue.hh"],
)

cc_library(
    name = "room",
    srcs = ["room.cc"],
    hdrs = ["room.hh"],
    deps = [
        ":client",
        ":event",
        ":event_queue",
        ":team",
        "//conway:structure_properties",
    ],
)

cc_test(
    name = "room_test",
    size = "small",
    srcs = ["room_test.cc"],
    deps = [
        ":room",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "team",
    srcs = ["team.cc"],
    hdrs = ["team.hh"],
    copts = CC_OPTS,
    deps = [
        ":client",
        ":event",
        ":event_queue",
        "//conway:structure",
    ],
)

cc_test(
    name = "team_test",
    size = "small",
    srcs = ["team_test.cc"],
    deps = [
        ":team",
        "@googletest//:gtest_main",
    ],
)
