# Utility classes

load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
# load("@build_stack_rules_proto//rules/ts:proto_ts_library.bzl", "proto_ts_library")
# load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")

filegroup(
    name = "protos",
    srcs = glob(["*.proto"]),
    visibility = ["//:__pkg__"],
)

cc_library(
    name = "vector2",
    srcs = ["vector2.cc"],
    hdrs = ["vector2.hh"],
    visibility = [
        "//client_wasm:__pkg__",
        "//conway:__pkg__",
    ],
    deps = [":vector2_cc_proto"],
)

cc_test(
    name = "vector2_test",
    size = "small",
    srcs = ["vector2_test.cc"],
    deps = [
        ":vector2",
        ":vector2_cc_proto",
        "@googletest//:gtest_main",
    ],
)

proto_library(
    name = "vector2_proto",
    srcs = ["vector2.proto"],
    visibility = [
        "//conway:__pkg__",
        "//conway_rts:__pkg__",
    ],
)

cc_proto_library(
    name = "vector2_cc_proto",
    deps = [":vector2_proto"],
)

# proto_compile(
#     name = "vector2_ts_proto_compile",
#     options = {"@build_stack_rules_proto//plugin/stephenh/ts-proto:protoc-gen-ts-proto": [
#         "emitImportedFiles=false",
#     ]},
#     outputs = ["vector2.pb.ts"],
#     plugins = ["@build_stack_rules_proto//plugin/stephenh/ts-proto:protoc-gen-ts-proto"],
#     proto = "vector2_proto",
# )

# proto_ts_library(
#     name = "vector2_ts_proto",
#     srcs = ["vector2.pb.ts"],
#     visibility = ["//visibility:public"],
#     deps = [
#         "//:node_modules/long",
#         "//:node_modules/protobufjs",
#     ],
# )
